test/corpus/fail/lib/generic-actor.mo
=========
lib/generic-actor.mo
=========

actor class C<T>(){};
---

(source_file
  (class_dec
    (obj_sort)
    (type_identifier)
    (typ_params
      (typ_bind
        (type_identifier)))
    (tup_pat)
    (class_body
      (obj_body))))
